[tool.poetry]
name = "chatleaf"
version = "0.1.0"
description = ""
authors = ["Saikat Kumar Dey <deysaikatkumar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.319"
chromadb = "^0.4.14"
tiktoken = "^0.5.1"
chainlit = "^0.7.301"
sentence-transformers = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
